# hurriyet

./: LICENSE  README.md  bun.lockb  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: SettingsField.css  SettingsField.tsx
